--- a/src/component/nav/Nav.module.css
+++ b/src/component/nav/Nav.module.css
@@ -1,75 +1,76 @@
-.main{
-    z-index: 1000;
-    font-size: 1.2rem;
-    padding: 1.5rem;
-    background-color: #5333ed ;
-    color:#ffffff ;
-    display: flex;
-    justify-content: space-between;
-    font-family: 'Righteous', cursive;
+.main {
+  z-index: 1000;
+  font-size: 1.2rem;
+  padding: 1.5rem;
+  background-color: #5333ed;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  font-family: "Righteous", cursive;
 }
-.right>a{
-    color: #ffffff;
-    font-size: 1.5rem;
-    text-decoration: none;
-    font-family: 'Righteous', cursive;
-    
-    gap: 1.5rem;
+.right > a {
+  color: #ffffff;
+  font-size: 1.5rem;
+  text-decoration: none;
+  font-family: "Righteous", cursive;
+
+  gap: 1.5rem;
 }
-.left>a{
-   
-    color: #ffffff;
-    font-size: 1.7rem;
-    text-decoration: none;
-    font-family: 'Righteous', cursive;
-    
-    
+.left > a {
+  color: #ffffff;
+  font-size: 1.7rem;
+  text-decoration: none;
+  font-family: "Righteous", cursive;
 }
-.right{
-    display: flex;
-    gap: 1.5rem;
-    font-family: 'Righteous', cursive;
-    font-size: 1.8rem;
+.right {
+  display: flex;
+  gap: 1.5rem;
+  font-family: "Righteous", cursive;
+  font-size: 1.8rem;
 }
 
-.right>span{
-    font-size: 1rem;
+.right > span {
+  font-size: 1rem;
 }
-.right>span>a{
-    font-size: 1.5rem;
-    text-decoration: none;
-    color: #ffffff;
+.right > span > a {
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: #ffffff;
 }
 
-
-
-.navToggle{
+.navToggle {
+  display: none;
+}
+.navProfile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+}
+@media (max-width: 421px) {
+  .navToggle {
+    display: block;
+  }
+  .right {
     display: none;
-}
-@media (max-width: 421px){
-    .navToggle{
-        display:block;
-    }
-    .right{
-        display: none;
-    }
-    .active{
-        display: flex;
-        flex-direction: column;
-    }
-    .left>a{
-        font-size: 1rem;
-    }
-    .active>a{
-        font-size: .8rem;
-    }
-    .navToggle>a{
-        text-decoration: none;
-        font-size: 1rem;
-        color: #ffffff;
-        margin-right: 1rem
-    }
-    #c{
-        display: none;
-    }
+  }
+  .active {
+    display: flex;
+    flex-direction: column;
+  }
+  .left > a {
+    font-size: 1rem;
+  }
+  .active > a {
+    font-size: 0.8rem;
+  }
+  .navToggle > a {
+    text-decoration: none;
+    font-size: 1rem;
+    color: #ffffff;
+    margin-right: 1rem;
+  }
+  #c {
+    display: none;
+  }
 }
